--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@ table, th, td {
     width: 100%;
     text-align: center;
 }
-.help-overlay, .signup-overlay, .login-overlay, .logout-overlay {
+.help-overlay, .signup-overlay, .login-overlay, .logout-overlay, .chat-overlay {
     display: none;
     position: fixed;
     top: 0;
@@ -15,7 +15,7 @@ table, th, td {
     justify-content: center;
     align-items: center;
 }
-.overlay-help, .overlay-signup, .overlay-login, .overlay-logout {
+.overlay-help, .overlay-signup, .overlay-login, .overlay-logout, .overlay-chat {
     background-color: white;
     padding: 30px;
     border-radius: 10px;
@@ -24,7 +24,7 @@ table, th, td {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     text-align: center;
 }
-.help-closeBtn, .signup-closeBtn, .login-closeBtn, .logout-closeBtn {
+.help-closeBtn, .signup-closeBtn, .login-closeBtn, .logout-closeBtn, .chat-closeBtn {
     position: absolute;
     top: 10px;
     right: 15px;
@@ -41,35 +41,38 @@ table, th, td {
     text-align: center;
     height: 45px;
 }
-.rooms-header {
-    border:1px solid black;
-    width: 36%;
-    text-align: center;
-    height: 80px;
-}
-.available-rooms {
-    height: 500px; 
-    overflow-y: auto; 
-    border: 1px solid #ccc;
-    margin-right: 800px;
+.chatrooms-container {
+    display: flex;
+    gap: 20px;
+    margin: 0;
+    padding: 0;
 }
 .chatroom-tb {
-    width: 100%;
+    width: 50%;
     border-collapse: collapse;
 }
 .chatroom-thead {
     background-color: #f5f5f5;
-    position: sticky;
     top: 0;
+    width: 50%;
 }
 .room-name {
-    width: 30%;
+    margin: 0;
+    padding: 0;
+    font-size: 18px; 
+    font-weight: bold;
 }
 .room-status {
-    width: 40%;
+    margin: 0;
+    padding: 0;
+    font-size: 18px; 
+    font-weight: bold;
 }
 .join-room {
-    width: 50%;
+    margin: 0;
+    padding: 0;
+    font-size: 18px; 
+    font-weight: bold;
 }
 .current-room {
     border:1px solid black;
@@ -79,7 +82,19 @@ table, th, td {
 }
 .chatroom {
     height: 500px; 
-    overflow-y: auto; 
     border: 1px solid #ccc;
-    margin-left: 800px;
+    margin-left: 100px;
+    width: 50%;
 }
+.room-headers {
+    width: 10%;
+    height: 10%;
+}
+.available-rooms {
+    margin: 0;
+    padding: 0;
+    font-size: 18px; 
+    font-weight: bold;
+}
+
+
