--- a/index.css
+++ b/index.css
@@ -1,7 +1,21 @@
-table, th, td {
+table {
     border:1px solid black;
     width: 100%;
     text-align: center;
+}
+th, td {
+    border: 1px solid black;
+    text-align: center;
+    padding: 8px;
+}
+.page-header {
+    width: 100%;
+}
+.helpBtn, .signupBtn, .loginBtn, .logoutBtn, .add-rooms {
+    border: none;
+    background: none;
+    cursor: pointer;
+    font-weight: bold;
 }
 .help-overlay, .signup-overlay, .login-overlay, .logout-overlay, .chat-overlay {
     display: none;
@@ -53,32 +67,13 @@ table, th, td {
 }
 .chatroom-thead {
     background-color: #f5f5f5;
-    top: 0;
-    width: 50%;
-}
-.room-name {
-    margin: 0;
-    padding: 0;
-    font-size: 18px; 
-    font-weight: bold;
-}
-.room-status {
-    margin: 0;
-    padding: 0;
-    font-size: 18px; 
-    font-weight: bold;
-}
-.join-room {
-    margin: 0;
-    padding: 0;
-    font-size: 18px; 
-    font-weight: bold;
+
 }
 .current-room {
     border:1px solid black;
     width: 36%;
     text-align: center;
-    height: 80px;
+    height: 40px;
 }
 .chatroom {
     height: 500px; 
@@ -86,15 +81,12 @@ table, th, td {
     margin-left: 100px;
     width: 50%;
 }
-.room-headers {
-    width: 10%;
-    height: 10%;
-}
 .available-rooms {
     margin: 0;
     padding: 0;
     font-size: 18px; 
     font-weight: bold;
 }
+
 
 
