--- a/index.css
+++ b/index.css
@@ -241,3 +241,7 @@
         .logout:hover {
             background-color: #c82333;
         }
+        .user-msgBox {
+           border: 1px solid black;
+           margin-left: 850px;
+        }
